      
      }
      
      \item \code{plot_Histogram()}:
      \itemize{
      
        \item Change default y-axis labelling from 'Counts' to 'Frequency'
      
      }
      
        \item \code{plot_AbanicoPlot()}:
      \itemize{
      
        \item numeric values allowed for parameter centrality,
        \item KDE label value fixed,
        \item layout functionality added,
        \item not supported summary keywords fixed.
      
      }
      
      
      
       \item \code{analyse_SAR.CWOSL()}:
      \itemize{
      
        \item Clarify behaviour when no OSL curve is provided; function
        now stops with an error (#132, reported by Alice Versendaal)
      
      }
      
        \item \code{plot_RLum.Data.Curve()}:
      \itemize{
      
        \item Add argument \code{norm} to allow for curve normalisation to 
        the highest value (#129)
      
      }
      
      
      \item \code{calc_MaxDose3()} & \code{calc_MaxDose4()}:
      
        \itemize{
        
        \item bootstrap method (recycled) as described in Cunningham & Wallinga (2012) implemented,
        \item upper and lower plot margins of profile log likelihood plots decreased,
        
        \item function now iteratively adjusts boundaries for gamma, sigma and p0 when one of the estimators reaches the lower or upper boundary,
        
        \item new arguments: \code{boundary.sigma}, \code{boundary.gamma}, \code{init.values}, \code{...} (\code{bs.M}, \code{bs.N}, \code{bs.h}, \code{sigmab.sd}),
        
        \item removed/merged arguments: \code{sigma.xlb}, \code{sigma.xub}, \code{gamma.xlb}, \code{gamma.xub}, \code{init.gamma}, \code{init.sigma}, \code{init.p0}, \code{output.indices}
        
        }
   
   
   \item \code{readBIN2R()}:
      \itemize{
      
        \item Integrity checks added to avoid unspecific errors for wrong input 
        formats. 
      
      }
   
   
   
   }
   
 }
 
  \subsection{Internals}{
   \itemize{   
  